src/test/deca/codegen/valid/testPlus.deca
// Description:
//    tests d'expressions entieres
//
// Resultats:
//    12

{
   int a;
   int b = 8+9;
   float c = 4.3;
   float d;

   a = 3;
   d = 4.3;

   println(a+b);
   println(c+d);
}
