src/test/deca/codegen/invalid/divZero3.deca
{
    float a = 0;
    float b = 6;
    float c = b/a;
}
//ERROR Error : divided by zero.